<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">NotiMe!</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="welcome">Please enter your Google account information
	</string>
	<string name="username">User Name</string>
	<string name="password">Password</string>
	<string name="google_suffix">"@"gmail.com</string>
	<string name="remember_me">remember me</string>
	<string name="about_title">NotiMe!</string>
	<string name="about_text"><b>NotiMe!</b> is a Location based Notification
 Service for your Google Calendar!\n\nIt is open source, so you can help us improve on:\n<i>http://code.google.com/p/notime/</i>\n\nOr mail us to:\n<i>noti.me.android@gmail.com</i></string>
	<string name="exit">EXIT</string>

	<string name="error_login_details">Please fill in your login information</string>
	<string name="error_login">I could not log you in!\nCheck your login
 information and your connection status</string>
	<string name="error_connection">I could not connect to the Internet :(</string>

	<string name="timerPickerPreference_NotiMe">NotiMe!</string>
	<string name="timerPickerPreference_minutesBefore">minutes before</string>
	<string name="timerPickerPreference_plus">+</string>
	<string name="timerPickerPreference_minus">-</string>
	<string name="timerPickerPreference_colon">:</string>

	<string name="notificationDisplay_in">" in "</string>
	<string name="notificationDisplay_now">" now!"</string>
	<string name="notificationDisplay_getOnYourWay">&quot;You should set out for &quot;</string>
	<string name="notificationDisplay_at">" at "</string>


	<string name="notifyingService_check">Please check your network/GPS</string>
	<string name="notifyingService_hours">" hours"</string>
	<string name="notifyingService_hour">" hour"</string>
	<string name="notifyingService_minutes">" minutes"</string>
	<string name="notifyingService_minute">" minute"</string>
	<string name="notifyingService_and">" and "</string>
	<string name="notifyingService_beenOnYourWay">You should have left by now!</string>
	<string name="notifyingService_problem">Problem</string>
	<string name="notifyingService_error">Event location not found</string>
	<string name="notifyingService_snoozed">&quot;Snoozed: &quot;</string>
	<string name="notifyingService_timealert">"Time alert: "</string>
	<string name="notifyingService_startin">" starts in "</string>
	<string name="notifyingService_noroute">Could not calculate directions to the event location</string>
	<string name="notifyingService_minus">" - "</string>
	<string name="notifyingService_toGo">&quot;Leave in &quot;</string>

	<string name="preference_signalpref_title">Notification Signals</string>
	<string name="preference_sound_title">Sound</string>
	<string name="preference_sound_sum">Alert me with sound</string>
	<string name="preference_vibration_title">Vibration</string>
	<string name="preference_vibration_sum">Alert me with vibration	</string>
	<string name="preference_ringtone_title">Ringtone Preference</string>
	<string name="preference_ringtone_sum">Pick a ringtone for sound</string>
	<string name="preference_light_title">Light</string>
	<string name="preference_light_sum">Alert me with led</string>
	<string name="preference_timepref_title">Notification Time Setup</string>
	<string name="preference_time_title">Notification Time</string>
	<string name="preference_time_sum">Time to notify before you need to get going</string>
	<string name="preference_calendarpref_title">Calendars Setup</string>
	<string name="preference_calendar_title">Calendars</string>
	<string name="preference_calendar_sum">The calendars NotiMe! will read
 from</string>

	<string name="notifdisplay_showEvent">Show Event</string>
	<string name="notifdisplay_showDirection">Show Directions</string>
	<string name="notifdisplay_snooze">Snooze</string>
	<string name="notifdisplay_dismiss">Dismiss</string>

	<string name="notierrdisplay_cantFindLocation"><b>NotiMe!</b> can not find the location of the following event:</string>
	<string name="notierrdisplay_locprovided">"Location provided: "</string>
	<string name="notierrdisplay_suggestions">Suggestions:</string>
	<string name="notierrdisplay_corrections">Suggested alternatives:</string>
	<string name="notierrdisplay_notime"><b>NotiMe!</b> (minutes before)</string>
	<string name="notierrdisplay_ten">10</string>
	<string name="notierrdisplay_plus">+</string>
	<string name="notierrdisplay_minus">-</string>
	<string name="notierrdisplay_dismiss">Dismiss <b>NotiMe!</b> for this event</string>

	<string name="main_loginhint">Your Google login</string>
	<string name="main_passwordhint">Your password</string>
	<string name="main_rememberme">Remember Me</string>

</resources>
