<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/preference_signalpref_title">
		<CheckBoxPreference android:key="cbp1" 
			android:title="@string/preference_sound_title" android:summary="@string/preference_sound_sum" 
			 />
		<CheckBoxPreference android:key="cbp2"
			android:title="@string/preference_vibration_title" android:summary="@string/preference_vibration_sum" />

		<CheckBoxPreference android:key="cbp3"
			android:title="@string/preference_light_title" android:summary="@string/preference_light_sum" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/preference_timepref_title">
		<TimePickerPreference android:key="time1"
			android:title="@string/preference_time_title" android:summary="@string/preference_time_sum" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preference_calendarpref_title"> 
		<ListPreferenceMultiSelect android:key="list1"
			android:title="@string/preference_calendar_title" android:summary="@string/preference_calendar_sum"
			android:entries="@array/placeholder" android:entryValues="@array/placeholder" />
	</PreferenceCategory>

</PreferenceScreen>
