<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent"
	android:orientation="vertical">
	<ScrollView android:id="@+id/scrollview"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:layout_weight="1">
		<RelativeLayout android:id="@+id/RelativeLayout01"
			android:layout_width="fill_parent" android:layout_height="fill_parent">

			<LinearLayout android:id="@+id/inputsview"
				android:gravity="top" android:orientation="vertical"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:layout_gravity="center">
				<TextView android:text="@string/app_name"
					android:layout_height="wrap_content" android:layout_width="wrap_content"
					android:layout_gravity="center" android:layout_marginBottom="25dip"
					android:textSize="25sp" />
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/welcome"
					android:paddingBottom="10dip" />


				<RelativeLayout android:id="@+id/widget76"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_centerHorizontal="true">

					<EditText android:id="@+id/username"
						android:layout_height="wrap_content" android:paddingBottom="0dip"
						android:text="" android:hint="@string/main_loginhint"
						android:layout_width="235sp" />

					<TextView android:layout_width="fill_parent"
						android:layout_height="wrap_content" android:text="@string/google_suffix"
						android:layout_toRightOf="@+id/username"
						android:layout_alignBottom="@+id/username" />
				</RelativeLayout>

				<EditText android:id="@+id/password" android:layout_height="wrap_content"
					android:paddingBottom="0dip" android:text="" android:hint="@string/main_passwordhint"
					android:layout_width="235sp" android:password="true" />

				<CheckBox android:id="@+id/remember" android:paddingBottom="24sp"
					android:paddingTop="24sp" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/main_rememberme" />

			</LinearLayout>


			<LinearLayout android:id="@+id/linlayoutButtons"
				android:layout_below="@+id/inputsview" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:gravity="bottom">

				<ToggleButton android:id="@+id/toggle_button"
					android:layout_height="wrap_content" android:layout_width="wrap_content"
					android:layout_weight="1" />

			</LinearLayout>

		</RelativeLayout>
	</ScrollView>
	<LinearLayout android:background="#000000"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="bottom" android:layout_weight="10">
		<LinearLayout android:orientation="horizontal"
			android:background="#000000" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="bottom"
			android:layout_weight="2">

			<Button android:text="Preferences" android:textColor="#aa0000"
				android:textSize="20sp" android:textStyle="bold"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_weight="1" android:gravity="center_vertical|center_horizontal" />

			<Button android:text="About" android:textColor="#0000aa"
				android:textSize="20sp" android:textStyle="bold"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_weight="1" android:gravity="center_vertical|center_horizontal" />

		</LinearLayout>

	</LinearLayout>

</LinearLayout>